Set project version to 0.0.1 and remove jitpack integration

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>rookit</artifactId>
         <groupId>com.github.JPDSousa</groupId>
-        <version>-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
         <relativePath>../rookit/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -16,13 +16,5 @@
         <module>rookit-storage-api</module>
         <module>rookit-storage-auto</module>
     </modules>
-	
-    <repositories>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-    </repositories>
-
 
 </project>
